# JUCE-plugin

./: .gitmodules  CMakeLists.txt  README.md
include/: PluginEditor.h  PluginProcessor.h
src/: PluginEditor.cpp  PluginProcessor.cpp
